src/test/ui/async-await/issues/issue-62009-1.stderr
error[E0728]: `await` is only allowed inside `async` functions and blocks
  --> $DIR/issue-62009-1.rs:6:22
   |
LL | fn main() {
   |    ---- this is not `async`
LL |     async { let (); }.await;
   |                      ^^^^^^ only allowed inside `async` functions and blocks

error[E0728]: `await` is only allowed inside `async` functions and blocks
  --> $DIR/issue-62009-1.rs:10:6
   |
LL | fn main() {
   |    ---- this is not `async`
...
LL |     }.await;
   |      ^^^^^^ only allowed inside `async` functions and blocks

error[E0728]: `await` is only allowed inside `async` functions and blocks
  --> $DIR/issue-62009-1.rs:12:15
   |
LL | fn main() {
   |    ---- this is not `async`
...
LL |     (|_| 2333).await;
   |               ^^^^^^ only allowed inside `async` functions and blocks

error[E0277]: `[closure@$DIR/issue-62009-1.rs:12:6: 12:9]` is not a future
  --> $DIR/issue-62009-1.rs:12:15
   |
LL |     (|_| 2333).await;
   |               ^^^^^^ `[closure@$DIR/issue-62009-1.rs:12:6: 12:9]` is not a future
   |
   = help: the trait `Future` is not implemented for closure `[closure@$DIR/issue-62009-1.rs:12:6: 12:9]`
   = note: [closure@$DIR/issue-62009-1.rs:12:6: 12:9] must be a future or must implement `IntoFuture` to be awaited
   = note: required for `[closure@$DIR/issue-62009-1.rs:12:6: 12:9]` to implement `IntoFuture`
help: remove the `.await`
   |
LL -     (|_| 2333).await;
LL +     (|_| 2333);
   |

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0277, E0728.
For more information about an error, try `rustc --explain E0277`.
